--- a/config/database.yml
+++ b/config/database.yml
@@ -48,7 +48,7 @@ common:
   #       - Ajax Service
   #       - All Services
   #
-  app_name: My Application
+  app_name: HelloRails
 
   # When "true", the agent collects performance data about your
   # application and reports this data to the New Relic service at
@@ -193,7 +193,12 @@ common:
 # provide newrelic configuration settings for these environments here.
 
 development:
-  <<: *default_settings
+  adapter: postgresql
+  encoding: unicode
+  database: db
+  pool: 5
+  username: staseg
+  password: 123321
   # Turn off communication to New Relic service in development mode (also
   # 'enabled').
   # NOTE: for initial evaluation purposes, you may want to temporarily
@@ -211,7 +216,12 @@ development:
   # textmate: true
 
 test:
-  <<: *default_settings
+  adapter: postgresql
+  encoding: unicode
+  database: db
+  pool: 5
+  username: staseg
+  password: 123321
   # It almost never makes sense to turn on the agent when running
   # unit, functional or integration tests or the like.
   monitor_mode: false
@@ -221,13 +231,23 @@ test:
 # transaction, you can leave this on all the time without
 # incurring any user-visible performance degradation.
 production:
-  <<: *default_settings
+  adapter: postgresql
+  encoding: unicode
+  database: db
+  pool: 5
+  username: staseg
+  password: 123321
   monitor_mode: true
 
 # Many applications have a staging environment which behaves
 # identically to production. Support for that environment is provided
 # here.  By default, the staging environment has the agent turned on.
 staging:
-  <<: *default_settings
+  adapter: postgresql
+  encoding: unicode
+  database: db
+  pool: 5
+  username: staseg
+  password: 123321
   monitor_mode: true
   # app_name: My Application (Staging)
