--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -3,9 +3,9 @@
 # Ruby, Java, .NET, PHP, and Python applications with deep visibility and low overhead.
 # For more information, visit www.newrelic.com.
 #
-# Generated November 01, 2013
+# Generated November 04, 2013
 #
-# This configuration file is custom generated for Ruby Garage_3
+# This configuration file is custom generated for Ruby Garage_5
 
 
 # Here are the settings that are common to all environments
@@ -15,7 +15,7 @@ common: &default_settings
   # You must specify the license key associated with your New Relic
   # account.  This key binds your Agent's data to your account in the
   # New Relic service.
-  license_key: '737fedc4c424466622fb8caf60f09476cfe724ef'
+  license_key: '81761df88bdfa353e3093cf35d1b4264893d7a26'
 
   # Agent Enabled (Ruby/Rails Only)
   # Use this setting to force the agent to run or not run.
@@ -42,7 +42,7 @@ common: &default_settings
   #       - Ajax Service
   #       - All Services
   #
-  app_name: HelloRails
+  app_name: hello_rails
 
   # When "true", the agent collects performance data about your
   # application and reports this data to the New Relic service at
